<resources>
    <string name="app_name">DriveNext</string>
    <string name="slogan">Поможем найти твою следующую поездку</string>
    <string name="no_connection">Нет подключения к интернету</string>
    <string name="no_connection_advice">Проверьте подключение и повторите попытку</string>
    <string name="try_again">Повторите попытку</string>
    <string name="onboarding1_title">Аренда автомобилей</string>
    <string name="onboarding1_text">Открой для себя удобный и доступный способ передвижения</string>
    <string name="onboarding2_title">Безопасно и удобно</string>
    <string name="onboarding2_text">Арендуй автомобиль и наслаждайтесь его удобством</string>
    <string name="onboarding3_title">Лучшие предложения</string>
    <string name="onboarding3_text">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="next">Далее</string>
    <string name="skip">Пропустить</string>
    <string name="enroll">Поехали</string>
    <string name="onboarding_logo">onboarding_logo</string>
    <string name="login">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="enter_email">Введите электронную почту</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="login_google">Войти через Google</string>
    <string name="account_login">Войдите в аккаунт</string>
    <string name="login_supporting_text">Пожалуйста, введите свои данные</string>
    <string name="enter_correct_email">Введите корректный адрес почты</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="confidence_politics">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="last_name">Фамилия</string>
    <string name="enter_lastname">Введите фамилию</string>
    <string name="first_name">Имя</string>
    <string name="enter_firstname">Введите имя</string>
    <string name="enter_surname">Введите отчество</string>
    <string name="surname">Отчество</string>
    <string name="birth_date">Дата рождения</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="sex">Пол</string>
    <string name="driver_license_number">Номер водительского удостоверения</string>
    <string name="driver_license_date">Дата выдачи</string>
    <string name="avatar_advice">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="upload_image">Загрузить фото</string>
    <string name="upload_driver_license_image">Загрузите фото водительского удостоверения</string>
    <string name="upload_image_passport">Загрузите фото паспорта</string>
    <string name="enter_correct_birthdate">Введите корректную дату рождения</string>
    <string name="title_congrats">Поздравляем</string>
    <string name="header_congrats">Пользуйтесь с удоволольствием</string>
    <string name="congrats_description">Вы успешно зарегистрировались. Обработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="home">Home</string>
    <string name="favorite">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="theme">Тема</string>
    <string name="chose_theme">Выберите тему</string>
    <string name="notifications">Уведомления</string>
    <string name="attach_car">Подключить свой автомобиль</string>
    <string name="my_rents">Мои бронирования</string>
    <string name="support">Помощь</string>
    <string name="invite">Пригласи друга</string>
    <string name="change_password">Поменять пароль</string>
    <string name="logout">Выйти из аккаунта</string>
    <string name="home_title">Давайте найдём автомобиль</string>
    <string name="rent">Забронировать</string>
    <string name="details">Детали</string>
    <string name="enter_car_brand">Введите марку автомобиля</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="address">Адрес нахождения</string>
    <string name="description">Описание</string>
    <string name="rent_start">Начало аренды:</string>
    <string name="rent_end">Конец аренды:</string>
    <string name="rent_amount">Аренда автомобиля x3 дня:</string>
    <string name="insurance_amount">Страховка  x3 дня:</string>
    <string name="total">Итого</string>
    <string name="deposit">Возвращаемый депозит</string>
    <string name="next_continue">Продолжить</string>
    <string name="rent_success">Бронирование успешно создано</string>
    <string name="to_home">Домой</string>
    <string name="to_rents">Перейти к своим бронированиям</string>
    <string name="driver_fullname">ФИО водителя</string>
    <string name="license_number">Номер ВУ</string>
    <string name="rent_status">Статус аренды</string>
</resources>
