<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <ListPreference
            android:defaultValue="system"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="theme"
            android:summary="@string/chose_theme"
            android:title="@string/theme"
            app:icon="@drawable/baseline_brightness_5_24"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="notifications"
            android:title="@string/notifications"
            app:icon="@drawable/notification" />

    </PreferenceCategory>
</PreferenceScreen>