<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RentDetailsFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_border"
                    android:orientation="vertical"
                    android:paddingVertical="20dp"
                    android:paddingStart="20dp"
                    tools:ignore="RtlSymmetry">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/car_rent_details_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="@color/secondary_black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/car_rent_details_brand"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="40dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="@color/primary_grey"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/car_rent_details_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="70dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:textColor="@color/secondary_black"
                            android:textSize="12sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="70dp"
                            android:fontFamily="@font/montserrat_semibold"
                            android:text="₽ в день"
                            android:textColor="@color/primary_grey"
                            android:textSize="12sp" />

                        <ImageView
                            android:id="@+id/car_rent_details_image"
                            android:layout_width="175dp"
                            android:layout_height="130dp"
                            android:layout_marginStart="130dp"
                            android:contentDescription="car_image" />
                    </FrameLayout>

                </LinearLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/address" />

                <TextView
                    android:id="@+id/rent_details_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Авиамоторная ул., 8, стр. 2" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/rent_start" />

                <TextView
                    android:id="@+id/rent_details_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="08:00, 27 сентября 2024" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/rent_end" />

                <TextView
                    android:id="@+id/rent_details_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="08:00, 30 сентября 2024" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/driver_fullname" />

                <TextView
                    android:id="@+id/rent_details_fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Sawka Sample" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/license_number" />

                <TextView
                    android:id="@+id/rent_details_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="77777777777" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/rent_status" />

                <TextView
                    android:id="@+id/rent_details_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="Approved" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/rent_amount" />

                <TextView
                    android:id="@+id/rent_details_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="2500₽/день" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/insurance_amount" />

                <TextView
                    android:id="@+id/rent_insurance_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="300₽/день" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/total" />

                <TextView
                    android:id="@+id/rent_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:textSize="20sp"
                    android:text="300₽" />


            </LinearLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancel_rent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primary_violet"
                android:fontFamily="@font/montserrat_medium"
                android:paddingVertical="20dp"
                android:text="Отменить бронирование"
                android:textColor="@color/primary_light_grey"
                app:cornerRadius="8dp" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>